--- a/app/src/main/res/layout/activity_checkmail.xml
+++ b/app/src/main/res/layout/activity_checkmail.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:context=".checkmail"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/emailconfirmimg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/confrimemail"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="150dp"
         />
 
@@ -17,8 +19,6 @@
         android:id="@+id/headerconfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        app:layout_constraintTop_toBottomOf="@id/emailconfirmimg"
         android:text="Confirm your email"
         android:fontFamily="@font/HussarBold"
         android:textAlignment="center"
@@ -29,19 +29,17 @@
         android:id="@+id/subheaderconfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/headerconfirm"
         android:text="We just sent you an email"
         android:textAlignment="center"
         android:fontFamily="@font/Agrandir"
-        android:textSize="17sp"
+        android:textSize="16sp"
         />
 
     <Button
         android:id="@+id/confirmemailbtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/headerconfirm"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="80dp"
         android:text="Open email app"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
@@ -53,7 +51,6 @@
         android:id="@+id/notreceiveemalibtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/confirmemailbtn"
         android:text="I didn't receive my email"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
@@ -61,5 +58,4 @@
         android:textColor="@color/blue"
         />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
