--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/welcomelogo"
         android:layout_width="240dp"
         android:layout_height="240dp"
         android:src="@drawable/logo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="250dp"
         android:layout_marginStart="85dp"
         android:layout_marginEnd="100dp"
@@ -23,8 +22,6 @@
         android:text="Welcome to Sunib Hero"
         android:layout_marginStart="90dp"
         android:layout_marginEnd="90dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcomelogo"
         android:textAlignment="center"
         android:fontFamily="@font/HussarBold"
         android:textSize="25sp"
@@ -34,11 +31,11 @@
         android:id="@+id/subheaderwelcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/headerwelcome"
         android:text="Learn programming in the fun way!"
         android:fontFamily="@font/Agrandir"
         android:textSize="13sp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="75dp"
         android:textAlignment="center"
         />
 
@@ -46,7 +43,6 @@
         android:id="@+id/gohome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:text="Continue"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -55,4 +51,4 @@
         android:layout_marginBottom="20dp"
 
         />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
