--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,92 +11,80 @@
         android:id="@+id/greetings"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:text="Good Morning, Siapa"
         android:layout_marginTop="40dp"
         android:layout_marginStart="40dp"
         android:textSize="30sp"
         />
 
-
-    <ImageButton
+    <ImageView
         android:id="@+id/imageprofile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_toRightOf="@id/greetings"
         android:background="@drawable/img6"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="25dp"
         />
 
     <ImageView
         android:id="@+id/progressbar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/greetings"
         android:background="@drawable/img8"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="150dp"
         />
-    
+
     <TextView
         android:id="@+id/recenttext"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Recent"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="240dp"
         android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@+id/progressbar"
         />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imagecoloring"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/recenttext"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:background="@drawable/img1"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="290dp"
         />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imagecoloring2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/recenttext"
-        app:layout_constraintLeft_toRightOf="@+id/imagecoloring"
+        android:layout_toEndOf="@+id/imagecoloring"
         android:background="@drawable/img2"
         android:layout_marginStart="3dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="290dp"
         />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imagecoloring3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/recenttext"
-        app:layout_constraintLeft_toRightOf="@+id/imagecoloring2"
+        android:layout_toRightOf="@+id/imagecoloring2"
         android:background="@drawable/img3"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="290dp"
         />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/gopro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/imagecoloring"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:background="@drawable/img7"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="430dp"
         />
 
     <TextView
@@ -105,32 +93,73 @@
         android:layout_height="wrap_content"
         android:text="Recommended"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="45dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="540dp"
         android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@+id/gopro"
         />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imgrec1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/recommendedtext"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:background="@drawable/img5"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="590dp"
         />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imgrec2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/recommendedtext"
-        app:layout_constraintLeft_toRightOf="@+id/imgrec1"
+        android:layout_toRightOf="@+id/imgrec1"
         android:background="@drawable/img5"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="590dp"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="730dp"
+        android:src="@drawable/rectangle"
+        />
+
+    <ImageView
+        android:id="@+id/homebtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/home"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="732dp"
+        />
+
+    <ImageView
+        android:id="@+id/searchbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/homebtn"
+        android:background="@drawable/search"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="733dp"
+        />
+
+    <ImageView
+        android:id="@+id/librarybtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/searchbtn"
+        android:background="@drawable/Library"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="733dp"
+        />
+
+    <ImageView
+        android:id="@+id/profilebtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/librarybtn"
+        android:background="@drawable/profile"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="735dp"
+        />
+
+</RelativeLayout>
