--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,8 +13,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginStart="25dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:src="@drawable/close"
         android:layout_marginEnd="30dp"
         />
@@ -23,8 +21,6 @@
         android:id="@+id/fullbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/closebtn"
         android:layout_marginTop="24dp"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="60dp"
@@ -38,8 +34,7 @@
         android:text="Login"
         android:layout_marginStart="40dp"
         android:textSize="30sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/closebtn"
+        android:layout_marginTop="80dp"
         android:fontFamily="@font/HussarBold"
         />
 
@@ -50,9 +45,7 @@
         android:text="Enter the email address and password to sign in to Sunib hero"
         android:textSize="13sp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/heeaderlogin"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="140dp"
         android:layout_marginLeft="40dp"
         android:fontFamily="@font/Agrandir"
         />
@@ -61,10 +54,9 @@
         android:id="@+id/emaillogin"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/subheaderlogin"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="200dp"
         android:hint="      Email"
         android:inputType="textEmailAddress"
         android:background="@drawable/border"
@@ -74,10 +66,9 @@
         android:id="@+id/passwordlogin"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/emaillogin"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="270dp"
         android:hint="      Password"
         android:inputType="textPassword"
         android:background="@drawable/border"
@@ -87,11 +78,8 @@
         android:id="@+id/Logintext"
         android:layout_width="230dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/passwordlogin"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:text="Don't have an account ?"
-        android:layout_marginEnd="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="350dp"
         android:gravity="right"
         android:textStyle="bold"
         />
@@ -100,22 +88,19 @@
         android:id="@+id/Gosignupbtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="237dp"
-        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/Logintext"
+        android:layout_marginTop="350dp"
+        android:layout_marginStart="5dp"
         android:background="@color/transparent"
         android:text="Sign Up here"
         android:textColor="@color/orange"
-        app:layout_constraintLeft_toRightOf="@id/Logintext"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordlogin"
         />
 
     <Button
         android:id="@+id/loginbtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="700dp"
         android:backgroundTint="@color/yellow"
         android:text="Continue"
         android:textColor="@color/blue"
@@ -123,4 +108,4 @@
         android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"
         />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
