--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="25dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:src="@drawable/close"
         android:layout_marginRight="30dp"
         />
@@ -22,8 +20,6 @@
         android:id="@+id/fullbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/closebtn"
         android:layout_marginTop="24dp"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="60dp"
@@ -35,10 +31,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
-        android:layout_marginLeft="40dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="80dp"
         android:textSize="30sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/closebtn"
         android:fontFamily="@font/HussarBold"
         />
 
@@ -48,11 +43,9 @@
         android:layout_height="wrap_content"
         android:text="Enter the email address and password you'd like to use sign in to Sunib hero"
         android:textSize="12sp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/headersignup"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="135dp"
+        android:layout_marginStart="35dp"
         android:fontFamily="@font/Agrandir"
         />
 
@@ -60,10 +53,9 @@
         android:id="@+id/emailsignup"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/subheadersignup"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="190dp"
         android:hint="      Email"
         android:inputType="textEmailAddress"
         android:background="@drawable/border"
@@ -74,9 +66,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@+id/emailsignup"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="260dp"
         android:hint="      Password"
         android:inputType="textPassword"
         android:background="@drawable/border"
@@ -84,42 +76,38 @@
 
     <TextView
         android:id="@+id/signuptext"
-        android:layout_width="216dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/passwordsignup"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:text="Have an account ?"
-        android:layout_marginEnd="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="340dp"
         android:gravity="right"
         android:textStyle="bold"
         />
 
     <TextView
         android:id="@+id/GoLoginbtn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="218dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="340dp"
         android:background="@color/transparent"
         android:text="Log in here"
         android:textColor="@color/orange"
-        app:layout_constraintLeft_toRightOf="@id/signuptext"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordsignup"
+        android:layout_toEndOf="@+id/signuptext"
         />
 
     <Button
         android:id="@+id/signupbtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="40dp"
         android:backgroundTint="@color/yellow"
         android:text="Continue"
         android:textColor="@color/blue"
         android:textSize="20sp"
+        android:layout_marginTop="700dp"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"
         />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
