--- a/app/src/main/res/layout/activity_scrorepage.xml
+++ b/app/src/main/res/layout/activity_scrorepage.xml
@@ -19,16 +19,24 @@
         />
 
     <TextView
-        android:layout_width="160dp"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/HussarBold"
-        android:text="Your Score 100"
+        android:text="Your Score 0"
         android:textSize="21sp"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="140dp"
         android:textAlignment="center"
         android:layout_marginTop="80dp"
         />
 
-    <ima
+    <ImageView
+        android:id="@+id/explain1"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
+        android:background="@drawable/explanation1"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="50dp"
+        />
 
 </LinearLayout>
