--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="grey">#D3D3D3</color>
     <color name="transparent">#00</color>
     <color name="pink">#FFA9DC</color>
+    <color name="red">#FF9393</color>
 </resources>
